@startuml

package GameInstance-Scene [[vscode://file/E:/School_stuff/Game/labor-projekt/Scenes/GameplayScene/GameInstance.tscn]] {
    class GameInstance  {
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Scenes/GameplayScene/GameInstance.cs ScriptFile]]
        [Nodes]
        LevelUpManager - [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/LevelUpManager.cs Script]]
        PauseMenu - [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/PauseMenu.cs Script]]
        AbilitySelector - [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/Custom Item Selector/AbilitySelector.cs Script]]
        PlayerCharacter - [[vscode://file/E:/School_stuff/Game/labor-projekt/Player/PlayerCharacter.cs Script]]
        Inventory - [[vscode://file/E:/School_stuff/Game/labor-projekt/Abilities/Inventory/Inventory.cs Script]]
        EnemySpawner - [[vscode://file/E:/School_stuff/Game/labor-projekt/Globals/EnemySpawner.cs Script]]
        --
        [Methods]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Scenes/GameplayScene/GameInstance.cs:49 _ExitTree()]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Scenes/GameplayScene/GameInstance.cs:17 _Ready()]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Scenes/GameplayScene/GameInstance.cs:25 EnemyKilled()]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Scenes/GameplayScene/GameInstance.cs:31 GameOver()]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Scenes/GameplayScene/GameInstance.cs:38 QuitToMenu()]]
    }
    class LevelUpManager  {
        [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/LevelUpManager.cs ScriptFile]]
        [Properties]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/LevelUpManager.cs:7 KillsToLevelUp]]
        --
        [Methods]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/LevelUpManager.cs:35 _ExitTree()]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/LevelUpManager.cs:16 _Ready()]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/LevelUpManager.cs:24 EnemyKilled()]]
    }
    package PauseMenu-Scene [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/PauseMenu.tscn]] {
        class PauseMenu  {
            [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/PauseMenu.cs ScriptFile]]
            [Nodes]
            InventoryDisplay - [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/InventoryDisplay.cs Script]]
            --
            [Methods]
            [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/PauseMenu.cs:47 _Input()]]
            [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/PauseMenu.cs:38 _Ready()]]
            [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/PauseMenu.cs:64 OnQuitPressed()]]
            [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/PauseMenu.cs:59 OnResumePressed()]]
            [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/PauseMenu.cs:21 pause()]]
            [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/PauseMenu.cs:30 resume()]]
        }
        package InventoryDisplay-Scene [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/InventoryDisplay.tscn]] {
            class InventoryDisplay  {
                [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/InventoryDisplay.cs ScriptFile]]
                [Nodes]
                Control - [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/ItemDisplay.cs Script]]
                Control2 - [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/ItemDisplay.cs Script]]
                --
                [Methods]
                [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/InventoryDisplay.cs:15 _Ready()]]
                [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/InventoryDisplay.cs:22 refresh()]]
            }
            class ItemDisplay  {
                [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/ItemDisplay.cs ScriptFile]]
                [Properties]
                [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/ItemDisplay.cs:7 Item]]
                --
                [Methods]
                [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/ItemDisplay.cs:23 _Ready()]]
            }
            InventoryDisplay::Control ---> ItemDisplay
        }
        PauseMenu::InventoryDisplay ---> InventoryDisplay
    }
    package AbilitySelector-Scene [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/Custom Item Selector/AbilitySelector.tscn]] {
        class AbilitySelector  {
            [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/Custom Item Selector/AbilitySelector.cs ScriptFile]]
            [Nodes]
            SelectableItem - [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/Custom Item Selector/SelectableItem.cs Script]]
            --
            [Methods]
            [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/Custom Item Selector/AbilitySelector.cs:97 _Ready()]]
            [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/Custom Item Selector/AbilitySelector.cs:65 ConfirmButtonPressed()]]
            [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/Custom Item Selector/AbilitySelector.cs:43 getRandomUnownedItem()]]
            [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/Custom Item Selector/AbilitySelector.cs:87 SelectableItemPressed()]]
            [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/Custom Item Selector/AbilitySelector.cs:20 showSelector()]]
        }
        package SelectableItem-Scene [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/Custom Item Selector/SelectableItem.tscn]] {
            class SelectableItem  {
                [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/Custom Item Selector/SelectableItem.cs ScriptFile]]
                [Nodes]
                ItemDisplay - [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/ItemDisplay.cs Script]]
                [Properties]
                [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/Custom Item Selector/SelectableItem.cs:9 Item]]
                --
                [Methods]
                [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/Custom Item Selector/SelectableItem.cs:37 _GuiInput()]]
                [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/Custom Item Selector/SelectableItem.cs:20 _Ready()]]
                [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/Custom Item Selector/SelectableItem.cs:27 select()]]
                [[vscode://file/E:/School_stuff/Game/labor-projekt/GUI/Custom Item Selector/SelectableItem.cs:32 unselect()]]
            }

            SelectableItem::ItemDisplay ---> ItemDisplay
        }
        AbilitySelector::SelectableItem ---> SelectableItem
    }
    class PlayerCharacter  {
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Player/PlayerCharacter.cs ScriptFile]]
        [Properties]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Player/PlayerCharacter.cs:65 CurrentHealth]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Player/PlayerCharacter.cs:53 MaxHealth]]
        --
        [Methods]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Player/PlayerCharacter.cs:121 _PhysicsProcess()]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Player/PlayerCharacter.cs:112 _Ready()]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Player/PlayerCharacter.cs:206 _UnhandledInput()]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Player/PlayerCharacter.cs:171 _UnhandledKeyInput()]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Player/PlayerCharacter.cs:279 BulletJump()]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Player/PlayerCharacter.cs:384 Dash()]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Player/PlayerCharacter.cs:310 EndBulletJump()]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Player/PlayerCharacter.cs:375 EndGlide()]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Player/PlayerCharacter.cs:343 EndSlide()]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Player/PlayerCharacter.cs:261 Jump()]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Player/PlayerCharacter.cs:239 LandedOnGround()]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Player/PlayerCharacter.cs:246 LeftGround()]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Player/PlayerCharacter.cs:414 ResetDash()]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Player/PlayerCharacter.cs:357 StartGlide()]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Player/PlayerCharacter.cs:316 StartSlide()]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Player/PlayerCharacter.cs:251 UpdateGravityScale()]]
    }
    class Inventory  {
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Abilities/Inventory/Inventory.cs ScriptFile]]
        [Methods]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Abilities/Inventory/Inventory.cs:19 _Process()]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Abilities/Inventory/Inventory.cs:37 addAbility()]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Abilities/Inventory/Inventory.cs:65 GetItems()]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Abilities/Inventory/Inventory.cs:51 removeAbility()]]
    }
    class EnemySpawner  {
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Globals/EnemySpawner.cs ScriptFile]]
        [Methods]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Globals/EnemySpawner.cs:30 _Process()]]
        [[vscode://file/E:/School_stuff/Game/labor-projekt/Globals/EnemySpawner.cs:49 SpawnRandomEnemy()]]
    }
    GameInstance::LevelUpManager ---> LevelUpManager
    GameInstance::PauseMenu ---> PauseMenu
    GameInstance::AbilitySelector ---> AbilitySelector
    GameInstance::PlayerCharacter ---> PlayerCharacter
    GameInstance::Inventory ---> Inventory
    GameInstance::EnemySpawner ---> EnemySpawner
}

@enduml